openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firesight-coordinator
  labels:
    app: firesight-coordinator
spec:
  selector:
    app: firesight-coordinator
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
